arch/powerpc/configs: updates to defconfigs
Signed-off-by: David Mercado <adm@gmail.com>
Signed-off-by: Paul Butler <paul.butler@windriver.com>

--- a/arch/powerpc/configs/elpaso_defconfig
+++ b/arch/powerpc/configs/elpaso_defconfig
@@ -1035,8 +1035,8 @@ CONFIG_DEVKMEM=y
 #
 # Non-8250 serial port support
 #
-CONFIG_SERIAL_ARM_PL011=y
-CONFIG_SERIAL_ARM_PL011_CONSOLE=y
+CONFIG_SERIAL_ACP=y
+CONFIG_SERIAL_ACP_CONSOLE=y
 # CONFIG_SERIAL_MFD_HSU is not set
 # CONFIG_SERIAL_UARTLITE is not set
 CONFIG_SERIAL_CORE=y
