--- a/arch/powerpc/configs/rbs_acp34xxRT_defconfig
+++ b/arch/powerpc/configs/rbs_acp34xxRT_defconfig
@@ -1108,8 +1108,8 @@ CONFIG_SERIAL_8250_RUNTIME_UARTS=2
 #
 # Non-8250 serial port support
 #
-CONFIG_SERIAL_ARM_PL011=y
-CONFIG_SERIAL_ARM_PL011_CONSOLE=y
+CONFIG_SERIAL_ACP=y
+CONFIG_SERIAL_ACP_CONSOLE=y
 # CONFIG_SERIAL_MFD_HSU is not set
 # CONFIG_SERIAL_UARTLITE is not set
 CONFIG_SERIAL_CORE=y
