--- a/drivers/tty/serial/Kconfig
+++ b/drivers/tty/serial/Kconfig
@@ -63,31 +63,46 @@ config SERIAL_AMBA_PL011_CONSOLE
 	  your boot loader (lilo or loadlin) about how to pass options to the
 	  kernel at boot time.)
 
-config SERIAL_ARM_PL011
-	tristate "ARM PL011 serial port support"
-	depends on HAVE_CLK
+config SERIAL_ACP
+	bool "LSI's Serial Driver for the ACP"
 	select SERIAL_CORE
 	help
-	  Handles the serial ports in Axxia 3400.
+	  Handles the serial ports (there are two) on LSI's ACP board
+	  and the simulated serial port provided by ISS.
 
-	  If unsure, say N.
-
-config SERIAL_ARM_PL011_CONSOLE
-	bool "Support for console on ARM PL011 serial port"
-	depends on SERIAL_ARM_PL011=y
+config SERIAL_ACP_CONSOLE
+	bool "Console on the ACP serial port"
+	depends on SERIAL_ACP=y
 	select SERIAL_CORE_CONSOLE
-	---help---
-	  Say Y here if you wish to use an ARM PrimeCell UART as the system
-	  console (the system console is the device which receives all kernel
-	  messages and warnings and which allows logins in single user mode).
+	help
+	  If you say Y here, it will be possible to use a serial port as the
+	  system console (the system console is the device which receives all
+	  kernel messages and warnings and which allows logins in single user
+	  mode). This could be useful if some terminal or printer is connected
+	  to that serial port.
 
-	  Even if you say Y here, the currently visible framebuffer console
+	  Even if you say Y here, the currently visible virtual console
 	  (/dev/tty0) will still be used as the system console by default, but
 	  you can alter that using a kernel command line option such as
-	  "console=ttyAMA0". (Try "man bootparam" or see the documentation of
-	  your boot loader (lilo or loadlin) about how to pass options to the
-	  kernel at boot time.)
+	  "console=ttyS1". (Try "man bootparam" or see the documentation of
+	  your boot loader (grub or lilo or loadlin) about how to pass options
+	  to the kernel at boot time.)
 
+	  If you don't have a VGA card installed and you say Y here, the
+	  kernel will automatically use the first serial line, /dev/ttyS0, as
+	  system console.
+
+	  You can set that using a kernel command line option such as
+	  "console=uart8250,io,0x3f8,9600n8"
+	  "console=uart8250,mmio,0xff5e0000,115200n8".
+	  and it will switch to normal serial console when the corresponding
+	  port is ready.
+	  "earlycon=uart8250,io,0x3f8,9600n8"
+	  "earlycon=uart8250,io,0x3f8,9600n8"
+	  "earlycon=uart8250,mmio,0xff5e0000,115200n8".
+	  it will not only setup early console.
+
+	  If unsure, say N.
 
 config SERIAL_SB1250_DUART
 	tristate "BCM1xxx on-chip DUART serial support"
