--- a/arch/arm/mach-axxia/Makefile
+++ b/arch/arm/mach-axxia/Makefile
@@ -6,5 +6,6 @@ obj-y					+= clock.o
 obj-y                                   += io.o
 obj-y					+= timers.o
 obj-y					+= pci.o
+obj-$(CONFIG_I2C)			+= i2c.o
 obj-$(CONFIG_SMP)			+= platsmp.o headsmp.o
 obj-$(CONFIG_HOTPLUG_CPU)		+= hotplug.o
