arch/powerpc/boot/Makefile: boot flags, acp-sim support
Signed-off-by: Paul Butler <paul.butler@windriver.com>

--- a/arch/powerpc/boot/Makefile
+++ b/arch/powerpc/boot/Makefile
@@ -20,13 +20,23 @@
 all: $(obj)/zImage
 
 BOOTCFLAGS    := -Wall -Wundef -Wstrict-prototypes -Wno-trigraphs \
-		 -fno-strict-aliasing -msoft-float -pipe \
+		 -fno-strict-aliasing -Os -msoft-float -pipe \
 		 -fomit-frame-pointer -fno-builtin -fPIC -nostdinc \
 		 -isystem $(shell $(CROSS32CC) -print-file-name=include)
 BOOTAFLAGS	:= -D__ASSEMBLY__ $(BOOTCFLAGS) -traditional -nostdinc
 
 ifdef CONFIG_DEBUG_INFO
 BOOTCFLAGS	+= -g
+endif
+
+ifdef CONFIG_ACP
+BOOTCFLAGS	+= -DCONFIG_ACP
+BOOTAFLAGS	+= -DCONFIG_ACP
+endif
+
+ifdef CONFIG_ACPISS
+BOOTCFLAGS	+= -DCONFIG_ACPISS
+BOOTAFLAGS	+= -DCONFIG_ACPISS
 endif
 
 ifeq ($(call cc-option-yn, -fstack-protector),y)
@@ -49,7 +59,7 @@ $(obj)/treeboot-iss476-amp1.o: BOOTCFLAGS += -mcpu=405
 $(obj)/treeboot-iss476-amp2.o: BOOTCFLAGS += -mcpu=405
 $(obj)/treeboot-currituck.o: BOOTCFLAGS += -mcpu=405
 $(obj)/virtex405-head.o: BOOTAFLAGS += -mcpu=405
-
+$(obj)/treeboot-acp-sim.o: BOOTCFLAGS += -mcpu=476
 
 zlib       := inffast.c inflate.c inftrees.c
 zlibheader := inffast.h inffixed.h inflate.h inftrees.h infutil.h
@@ -70,7 +80,7 @@ src-wlib := string.S crt0.S crtsavres.S stdio.c main.c \
 		gunzip_util.c elf_util.c $(zlib) devtree.c oflib.c ofconsole.c \
 		4xx.c ebony.c mv64x60.c mpsc.c mv64x60_i2c.c cuboot.c bamboo.c \
 		cpm-serial.c stdlib.c mpc52xx-psc.c planetcore.c uartlite.c \
-		fsl-soc.c mpc8xx.c pq2.c ugecon.c
+		fsl-soc.c mpc8xx.c pq2.c ugecon.c acp-sim.c
 src-plat := of.c cuboot-52xx.c cuboot-824x.c cuboot-83xx.c cuboot-85xx.c holly.c \
 		cuboot-ebony.c cuboot-hotfoot.c epapr.c treeboot-ebony.c \
 		prpmc2800.c \
