--- a/arch/arm/configs/axxiasim-a15_defconfig
+++ b/arch/arm/configs/axxiasim-a15_defconfig
@@ -298,6 +298,7 @@ CONFIG_ARCH_AXXIA=y
 #
 # Axxia platform type
 #
+CONFIG_ARCH_AXXIA_GIC=y
 CONFIG_ARCH_AXXIA_DT=y
 CONFIG_ARM_TIMER_SP804=y
 
@@ -348,7 +349,6 @@ CONFIG_ARM_ERRATA_751472=y
 CONFIG_ARM_ERRATA_754322=y
 CONFIG_ARM_ERRATA_754327=y
 CONFIG_ARM_ERRATA_764369=y
-CONFIG_ARM_GIC=y
 CONFIG_ICST=y
 
 #
