--- a/arch/arm/mach-axxia/Kconfig
+++ b/arch/arm/mach-axxia/Kconfig
@@ -1,9 +1,20 @@
 menu "Axxia platform type"
 	depends on ARCH_AXXIA
 
+config ARCH_AXXIA_GIC
+        bool "Multi-cluster ARM GIC support for the LSI Axxia platforms"
+        select IRQ_DOMAIN
+        select MULTI_IRQ_HANDLER
+	help
+	  The LSI Axxia platforms can have up to four clusters, each having
+	  four cores (so a total of 16 cores). This requires the use of a
+	  distributed interrupt system in lieu of of a single ARM GIC.
+
+	  This option enables support for this multi-cluster setup.
+
 config ARCH_AXXIA_DT
 	bool "Device Tree support for LSI Axxia platforms"
-	select ARM_GIC
+	select ARCH_AXXIA_GIC
 	select ARM_PATCH_PHYS_VIRT
 	select AUTO_ZRELADDR
 	select CPU_V7
