Renamed the config files for the LSI boards.

--- a/arch/powerpc/configs/lsisim_defconfig
+++ b/arch/powerpc/configs/lsisim_defconfig
@@ -288,6 +288,8 @@ CONFIG_PPC_47x=y
 # CONFIG_CURRITUCK is not set
 CONFIG_ELPASO=y
 # CONFIG_ICON is not set
+CONFIG_ACP=y
+# CONFIG_ACPISS is not set
 # CONFIG_ACP3400_DUS is not set
 # CONFIG_ACP3400_DUS_TB is not set
 # CONFIG_ACP3400_DUW2 is not set
@@ -303,7 +305,6 @@ CONFIG_ACP3400_I2C=y
 CONFIG_ACP3400_SSP=y
 CONFIG_ACP_PCIE_HOTPLUG=y
 CONFIG_440GP=y
-CONFIG_ACP=y
 # CONFIG_PPC_WSP is not set
 # CONFIG_KVM_GUEST is not set
 # CONFIG_IPIC is not set
@@ -1218,6 +1219,7 @@ CONFIG_I2C_COMPAT=y
 CONFIG_I2C_CHARDEV=y
 # CONFIG_I2C_MUX is not set
 CONFIG_I2C_HELPER_AUTO=y
+CONFIG_I2C_ALGOBIT=y
 
 #
 # I2C Hardware Bus support
@@ -1269,6 +1271,7 @@ CONFIG_I2C_HELPER_AUTO=y
 # Other I2C/SMBus bus drivers
 #
 # CONFIG_I2C_STUB is not set
+CONFIG_I2C_AXXIA=y
 CONFIG_I2C_DEBUG_CORE=y
 CONFIG_I2C_DEBUG_ALGO=y
 CONFIG_I2C_DEBUG_BUS=y
