There are various LSI development boards, ElPaso, Junction, Mission, etc.  All use the same Linux binary.  The configuration file used on all LSI boards is the same.  For PowerPC boards, arch/powerpc/configs/lsi_defconfig.  For ARM simulation, arch/powerpc/configs/lsisim_defconfig; for ARM hardware, arch/powerpc/configs/lsi_defconfig.
Signed-off-by: John Jacques <john.jacques@lsi.com>

--- a/arch/powerpc/configs/lsi_defconfig
+++ b/arch/powerpc/configs/lsi_defconfig
@@ -15,6 +15,9 @@ CONFIG_44x=y
 # CONFIG_E200 is not set
 CONFIG_PPC_FPU=y
 CONFIG_4xx=y
+CONFIG_ACP_PMU_PERFMON=y
+CONFIG_ACP_PMU_PERF_EVENT=y
+CONFIG_ACP_PMU_PERF_EVENT_PPC476=y
 CONFIG_BOOKE=y
 CONFIG_PTE_64BIT=y
 CONFIG_PHYS_64BIT=y
@@ -247,6 +250,7 @@ CONFIG_INLINE_WRITE_UNLOCK_IRQ=y
 # CONFIG_INLINE_WRITE_UNLOCK_IRQRESTORE is not set
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
+CONFIG_LSI_PPC_PCI=y
 CONFIG_PPC4xx_PCI_EXPRESS=y
 # CONFIG_PPC4xx_MSI is not set
 CONFIG_PPC_MSI_BITMAP=y
@@ -1567,6 +1571,7 @@ CONFIG_USB_MON=y
 #
 # USB Host Controller Drivers
 #
+CONFIG_LSI_USB_SW_WORKAROUND=y
 # CONFIG_USB_C67X00_HCD is not set
 # CONFIG_USB_XHCI_HCD is not set
 CONFIG_USB_EHCI_HCD=y
